cert-manager/linagora-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coffee-ingress
  namespace: vng-mail
  generation: 1
  creationTimestamp: '2021-11-04T07:44:27Z'
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'linagora.com.vn' ) {
        rewrite ^ https://linagora.vn permanent;
      }
spec:
  tls:
    - hosts:
        - linagora.com.vn
      secretName: linagora-prod-certificate
  rules:
    - host: linagora.com.vn
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: coffee-svc
              servicePort: 80
